--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ img {
 
 /* Showcase */
 .showcase {
-  /* height: 400px; */
+  height: 400px;
   background-color: var(--primarycolor);
   color: white;
   position: relative;
@@ -75,9 +75,47 @@ img {
   margin: 20px 0;
 }
 
+.showcase .grid {
+  overflow: visible;
+  grid-template-columns: 55% 45%;
+  gap: 30px;
+}
+
+.showcase-form {
+  position: relative;
+  top: 60px;
+  height: 350px;
+  width: 400px;
+  padding: 40px;
+  z-index: 100;
+  justify-self: flex-end;
+}
+
+.showcase-form .form-control {
+  margin: 30px 0;
+}
+
+.showcase-form input[type='text'],
+.showcase-form input[type='email'] {
+  border: 0;
+  border-bottom: 1px solid #b4becb;
+  width: 100%;
+  padding: 3px;
+  font-size: 16px;
+}
+
+.showcase-form input:focus {
+  outline: none;
+}
+
+
 .grid {
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Utilities */
@@ -86,6 +124,34 @@ img {
   margin: 0 auto;
   overflow: auto;
   padding: 0 40px;
+}
+
+.card {
+  background-color: whitesmoke;
+  color: #333;
+  box-shadow: 0 3px 10px rgba(0,0,0,0.5);
+  border-radius: 10px;
+  padding: 20px;
+  margin: 10px;
+}
+
+.btn {
+  display: inline-block;
+  padding: 10px 30px;
+  cursor: pointer;
+  background: var(--primarycolor);
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
+
+.btn-outline {
+  background-color: transparent;
+  border: 1px #fff solid;
+}
+
+.btn:hover {
+  transform: scale(0.98);
 }
 
 .flex {
