--- a/css/utilities.css
+++ b/css/utilities.css
@@ -1,153 +1,191 @@
 /* Utilities */
 .container {
-    max-width: 1100px;
-    margin: 0 auto;
-    overflow: auto;
-    padding: 0 40px;
-  }
-  
-  .card {
-    background-color: white;
-    color: #333;
-    box-shadow: 0 3px 10px rgba(0,0,0,0.5);
-    border-radius: 10px;
-    padding: 20px;
-    margin: 10px;
-  }
-  
-  .btn {
-    display: inline-block;
-    padding: 10px 30px;
-    cursor: pointer;
-    background: var(--primarycolor);
-    color: white;
-    border: none;
-    border-radius: 5px;
-  }
-  
-  .btn-outline {
-    background-color: transparent;
-    border: 1px #fff solid;
-  }
-  
-  .btn:hover {
-    transform: scale(0.95);
-  }
+  max-width: 1100px;
+  margin: 0 auto;
+  overflow: auto;
+  padding: 0 40px;
+}
 
-  .text-center {
-    text-align: center;
-  }
-  
-  .flex {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-  }
-  
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .grid-3 {
-    grid-template-columns: repeat(3, 1fr);
-  }
+.card {
+  background-color: white;
+  color: #333;
+  box-shadow: 0 3px 10px rgba(0,0,0,0.5);
+  border-radius: 10px;
+  padding: 20px;
+  margin: 10px;
+}
 
-  /* Margin */
-  .m-1 {
-    margin: 1rem;
-  }
-  .m-2 {
-    margin: 1.5rem;
-  }
-  .m-3 {
-    margin: 2rem;
-  }
-  .m-4 {
-    margin: 3rem;
-  }
-  .m-5 {
-    margin: 4rem;
-  }
-  .mx-1 {
-    margin: 0 1rem;
-  }
-  .mx-2 {
-    margin: 0 1.5rem;
-  }
-  .mx-3 {
-    margin: 0 2rem;
-  }
-  .mx-4 {
-    margin: 0 3rem;
-  }
-  .mx-5 {
-    margin: 0 4rem;
-  }
-  .my-1 {
-    margin: 1rem 0;
-  }
-  .my-2 {
-    margin: 1.5rem 0;
-  }
-  .my-3 {
-    margin: 2rem 0;
-  }
-  .my-4 {
-    margin: 3rem 0;
-  }
-  .my-5 {
-    margin: 4rem 0;
-  }
+.btn {
+  display: inline-block;
+  padding: 10px 30px;
+  cursor: pointer;
+  background: var(--primarycolor);
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
 
-  /* Padding */
-  .p-1 {
-    padding: 1rem;
-  }
-  .p-2 {
-    padding: 1.5rem;
-  }
-  .p-3 {
-    padding: 2rem;
-  }
-  .p-4 {
-    padding: 3rem;
-  }
-  .p-5 {
-    padding: 4rem;
-  }
-  .px-1 {
-    padding: 0 1rem;
-  }
-  .px-2 {
-    padding: 0 1.5rem;
-  }
-  .px-3 {
-    padding: 0 2rem;
-  }
-  .px-4 {
-    padding: 0 3rem;
-  }
-  .px-5 {
-    padding: 0 4rem;
-  }
-  .py-1 {
-    padding: 1rem 0;
-  }
-  .py-2 {
-    padding: 1.5rem 0;
-  }
-  .py-3 {
-    padding: 2rem 0;
-  }
-  .py-4 {
-    padding: 3rem 0;
-  }
-  .py-5 {
-    padding: 4rem 0;
-  }
+.btn-outline {
+  background-color: transparent;
+  border: 1px #fff solid;
+}
+
+.btn:hover {
+  transform: scale(0.95);
+}
+
+.bg-primary,
+.btn-primary {
+  background-color: var(--primarycolor);
+  color: #fff;
+}
+.bg-secondary,
+.btn-secondary {
+  background-color: var(--secondarycolor);
+  color: #fff;
+}
+.bg-dark,
+.btn-dark {
+  background-color: var(--darkcolor);
+  color: #fff;
+}
+.bg-light,
+.btn-light {
+  background-color: var(--lightcolor);
+  color: #333;
+}
+
+/* Text Sizes */
+.lead {
+  font-size: 20px;
+}
+.sm {
+  font-size: 1rem;
+}
+.md {
+  font-size: 2rem;
+}
+.lg {
+  font-size: 3rem;
+}
+.xl {
+  font-size: 4rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.grid-3 {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+/* Margin */
+.m-1 {
+  margin: 1rem;
+}
+.m-2 {
+  margin: 1.5rem;
+}
+.m-3 {
+  margin: 2rem;
+}
+.m-4 {
+  margin: 3rem;
+}
+.m-5 {
+  margin: 4rem;
+}
+.mx-1 {
+  margin: 0 1rem;
+}
+.mx-2 {
+  margin: 0 1.5rem;
+}
+.mx-3 {
+  margin: 0 2rem;
+}
+.mx-4 {
+  margin: 0 3rem;
+}
+.mx-5 {
+  margin: 0 4rem;
+}
+.my-1 {
+  margin: 1rem 0;
+}
+.my-2 {
+  margin: 1.5rem 0;
+}
+.my-3 {
+  margin: 2rem 0;
+}
+.my-4 {
+  margin: 3rem 0;
+}
+.my-5 {
+  margin: 4rem 0;
+}
+
+/* Padding */
+.p-1 {
+  padding: 1rem;
+}
+.p-2 {
+  padding: 1.5rem;
+}
+.p-3 {
+  padding: 2rem;
+}
+.p-4 {
+  padding: 3rem;
+}
+.p-5 {
+  padding: 4rem;
+}
+.px-1 {
+  padding: 0 1rem;
+}
+.px-2 {
+  padding: 0 1.5rem;
+}
+.px-3 {
+  padding: 0 2rem;
+}
+.px-4 {
+  padding: 0 3rem;
+}
+.px-5 {
+  padding: 0 4rem;
+}
+.py-1 {
+  padding: 1rem 0;
+}
+.py-2 {
+  padding: 1.5rem 0;
+}
+.py-3 {
+  padding: 2rem 0;
+}
+.py-4 {
+  padding: 3rem 0;
+}
+.py-5 {
+  padding: 4rem 0;
+}
